--- a/assets/dashboard/dashboard.css
+++ b/assets/dashboard/dashboard.css
@@ -112,9 +112,9 @@
 }
 
 /* SCROLL */
-.nav-desktop::-webkit-scrollbar-track{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);background: transparent ;border-radius: 10px; }
-.nav-desktop::-webkit-scrollbar{width: 4px;background-color:transparent;} 
-.nav-desktop::-webkit-scrollbar-thumb{border-radius: 10px;background-color: transparent;background-image: -webkit-linear-gradient(top,#262626 0%,#2ab0ed 100%);}
+.nav-desktop::-webkit-scrollbar-track{display: none; }
+.nav-desktop::-webkit-scrollbar{display: none;} 
+.nav-desktop::-webkit-scrollbar-thumb{display: none;}
  
  
 
