--- a/assets/checkout/checkout.css
+++ b/assets/checkout/checkout.css
@@ -113,7 +113,7 @@
 
 
 @media (min-width: 847px) {
-    header{ background: url(http://mokaru.com.co/wp-content/uploads/2022/07/Recurso-3-2.png) no-repeat center bottom / 70%;  background-color: var(--main-color-select) ;}
+    header{ background: url(http://mokaru.com.co/wp-content/uploads/2022/07/Recurso-3-2.png) no-repeat center bottom / 70%;  background-color: #FFFFFF ; box-shadow: 8px 13px 44px -6px #DFDBF7; color: #000000;}
     .logo-mobile{
         display: none;
     }
@@ -143,7 +143,7 @@
         font-style: normal;
         font-weight: 500;
         font-size: 1.4375em;
-        color: #FFFF;
+        color: #000000;
         margin: 20px;
         }
         
@@ -152,7 +152,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 1.3rem;
-        color: #FFFF;
+        color: #000000;
         margin: 50% 20px 0 20px;
         }
 
@@ -173,7 +173,7 @@
             font-weight: 700;
             font-size: 17px;
             line-height: 18px;
-            color: #FFFF;
+            color: #000000;
             margin-left: 20px;
             }
 
@@ -197,7 +197,7 @@
         width: 100%;
         top: 70px;
         background-color: #333;
-        background: url(http://mokaru.com.co/wp-content/uploads/2022/07/Recurso-3-2.png) no-repeat center bottom / 70%;  background-color: var(--main-color-select) ;
+        
     }
 
     .payment_options{
